# ci-dbg

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: codecov.yml  evict-gha-cache.yml
src/: CMakeLists.txt  main.cpp
